--- a/CTU60G/appsettings.json
+++ b/CTU60G/appsettings.json
@@ -1,17 +1,33 @@
 {
   "Config": 
   {
-    "DataURLOrFilePath": "test",
+    "DataURLOrFilePath": "",
     "CTULogin": "",
     "CTUPass": ""
   },
-  "Logging": 
-  {
-    "LogLevel": 
-    {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "Using": ["Serilog", "Serilog.Sinks.Console","Serilog.Sinks.File"],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": 
+      {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+        { 
+            "Name": "File",
+            "Args": 
+            { 
+                "path": "%PROGRAMDATA%\\CTU60\\Logs\\log-{Date}.txt",
+                "rollingInterval": "Day" 
+            }
+        },
+        {
+            "Name":"Console",
+            "Args":{}
+        }
+    ]
   }
 }
