--- a/CTU60G/appsettings.json
+++ b/CTU60G/appsettings.json
@@ -1,33 +1,43 @@
 {
-  "Config": 
-  {
+  "Config": {
     "DataURLOrFilePath": "",
     "CTULogin": "",
     "CTUPass": ""
   },
   "Serilog": {
-    "Using": ["Serilog", "Serilog.Sinks.Console","Serilog.Sinks.File"],
+    "Using": [ "Serilog", "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Debug",
-      "Override": 
-      {
+      "Override": {
         "Microsoft": "Warning",
         "System": "Warning"
       }
     },
     "WriteTo": [
-        { 
-            "Name": "File",
-            "Args": 
-            { 
-                "path": "%PROGRAMDATA%\\CTU60\\Logs\\log-{Date}.txt",
-                "rollingInterval": "Day" 
-            }
-        },
-        {
-            "Name":"Console",
-            "Args":{}
+      {
+        "Name": "File",
+        "Args": {
+          "path": "%PROGRAMDATA%\\CTU60\\Logs\\log-{Date}.txt",
+          "rollingInterval": "Day"
         }
+      },
+      {
+        "Name": "Console",
+        "Args": {}
+      }
+    ]
+  },
+  "Email": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSsl": "true",
+    "User": "testtoscrpts@gmail.com",
+    "Password": "testtoscript123",
+    "FromEmail": "testtoscrptsINVALID@gmail.com",
+    "FromName": "APTSERVIS",
+    "ToEmails": [
+      "testtoscrpts@gmail.com",
+      "testtoscrpts@gmail.com"
     ]
   }
 }
