finalized publishing, service now sends emails

--- a/CTU60G/appsettings.json
+++ b/CTU60G/appsettings.json
@@ -4,6 +4,18 @@
     "CTULogin": "",
     "CTUPass": ""
   },
+  "Email": {
+    "Host": "",
+    "Port": "",
+    "EnableSsl": "",
+    "User": "",
+    "Password": "",
+    "FromEmail": "",
+    "FromName": "",
+    "ToEmails": [
+      ""
+    ]
+  },
   "Serilog": {
     "Using": [ "Serilog", "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
@@ -25,19 +37,6 @@
         "Name": "Console",
         "Args": {}
       }
-    ]
-  },
-  "Email": {
-    "Host": "smtp.gmail.com",
-    "Port": "587",
-    "EnableSsl": "true",
-    "User": "testtoscrpts@gmail.com",
-    "Password": "testtoscript123",
-    "FromEmail": "testtoscrptsINVALID@gmail.com",
-    "FromName": "APTSERVIS",
-    "ToEmails": [
-      "testtoscrpts@gmail.com",
-      "testtoscrpts@gmail.com"
     ]
   }
 }
